--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -22,3 +22,4 @@
 
 # This file itself is owned by members who are assigned the Project Admin role in this project.
 CODEOWNERS "Project Admin"
+* xerrion lasse@xerrion.dk
